# keras-ocr

./: .coverage  .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  keras_ocr.ipynb  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: ci.yaml  vit-keras.yaml
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/examples/: end_to_end_training.rst  fine_tuning_detector.rst  fine_tuning_recognizer.rst  index.rst  using_pretrained_models.rst
docs/stubs/tensorflow/: keras.py
examples/: train_recognizer_synthtext90.py
keras_ocr/: __init__.py  _version.py  config.py  custom_objects.py  data_generation.py  datasets.py  detection.py  evaluation.py  pipeline.py  recognition.py  tools.py
scripts/: create_fonts_and_backgrounds.py  train_recognizer_synthtext90_multigpu.py
tests/: attribution.txt  test_custom_objects.py  test_evaluation.py  test_pipeline.py  test_pytorch_keras.py  test_tools.py
