[pylint]
extension-pkg-whitelist = cv2,torch,pyclipper
disable = C0111
ignore = _version.py
good-names=y,s1,s2,s3,s4,s5,h,double_conv,copyStateDict,v,x,g,sx,sy,ex,ey,k,X

[mypy]
ignore_missing_imports = True
check_untyped_defs = True

[yapf]
column_limit = 100

[coverage:run]
omit =
    keras_ocr/_version.py

[mypy-keras-ocr._version]
ignore_errors = True

[metadata]
name = keras-ocr
author = Fausto Morales
author_email = faustomorales@gmail.com
description = A packaged and flexible version of the CRAFT text detector and Keras CRNN recognition model.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faustomorales/keras-ocr
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
include_package_data = True
install_requires =
    essential_generators
    tqdm
    imgaug
    validators
    fonttools
    editdistance
    pyclipper
    shapely
    efficientnet==1.0.0

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = keras_ocr/_version.py
versionfile_build = keras_ocr/_version.py
tag_prefix = v